fix broken style from form-field

--- a/ui/scss/_vars.scss
+++ b/ui/scss/_vars.scss
@@ -43,6 +43,8 @@
 
   /* Input */
   --input-width: 330px;
+  --input-border-size: 2px;
+  --input-border-color: rgba(0,0,0,.25);
 
   /* Button */
   --button-primary-bg: var(--color-primary);
