--- a/ui/scss/component/_button.scss
+++ b/ui/scss/component/_button.scss
@@ -55,12 +55,11 @@ $button-focus-shift: 12%;
   color: var(--button-primary-color);
   background-color: var(--button-primary-bg);
   box-shadow: var(--box-shadow-layer);
-  opacity: 0.9;
+
   &:focus {
-    color: var(--button-primary-color);
+    //color: var(--button-primary-active-color);
+    //background-color:color: var(--button-primary-active-bg);
     //box-shadow: $box-shadow-focus;
-    //background-color: mix(black, $color-primary, $button-focus-shift)
-    opacity: 1;
   }
 }
 .button-alt
