--- a/ui/scss/component/_form-field.scss
+++ b/ui/scss/component/_form-field.scss
@@ -1,8 +1,5 @@
 @import "../global";
 
-$width-input-border: 2px;
-$color-form-border: #000;
-
 .form-row-submit
 {
   margin-top: $spacing-vertical;
@@ -24,7 +21,7 @@ $color-form-border: #000;
 }
 
 input[type="text"].input-copyable {
-  border: 1px solid var(--color-form-border);
+  border: 1px solid var(--input-border-color);
   line-height: 1;
   padding-top: $spacing-vertical * 1/3;
   padding-bottom: $spacing-vertical * 1/3;
@@ -50,7 +47,7 @@ input[type="text"].input-copyable {
     padding-right: 5px;
     height: $spacing-vertical;
     &:focus {
-      outline: $width-input-border solid var(--color-primary);
+      outline:  var(--input-border-size) solid var(--color-primary);
     }
   }
 
@@ -81,7 +78,7 @@ input[type="text"].input-copyable {
   input[type="number"],
   input[type="search"],
   input[type="date"] {
-    border-bottom: $width-input-border solid $color-form-border;
+    border-bottom: var(--input-border-size) solid var(--input-border-color);
     line-height: 1;
     padding-top: $spacing-vertical * 1/3;
     padding-bottom: $spacing-vertical * 1/3;
@@ -109,7 +106,7 @@ input[type="text"].input-copyable {
 
   textarea {
     padding: 2px;
-    border: $width-input-border solid $color-form-border;
+    border: var(--input-border-size) solid var(--input-border-color);
   }
 }
 .form-field--SimpleMDE {
